Rework Java Action Kit Content interfaces